--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,12 +1,5 @@
 <h1>id: <%= @task.id %>のタスクの編集ページ</h1>
 
-<%= form_for(@task) do |f| %>
-
-  <%= f.label :content, 'タスク' %>
-  <%= f.text_field :content %>
-  
-  <%= f.submit '投稿' %>
-
-<% end %>
+<%= render 'form', task: @task %>
 
 <%= link_to 'タスク一覧', tasks_path %>
