--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,8 +1,20 @@
-<%= form_for (task) do |f| %>
+<%= form_for(task) do |f| %>
+  <% if task.errors.any? %>
+    <div id= "error_explanation">
+      <ul>
+        <% task.errors.full_messages.each do |task| %>
+        <li><%= task %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+  
+  <%= f.label :status, 'ステータス' %>
+  <%= f.text_field :status %>
 
-  <%= f.label :content, 'メッセージ' %>
+  <%= f.label :content, 'タスク' %>
   <%= f.text_field :content %>
   
-  <%= submit '投稿' %>
+  <%= f.submit '投稿' %>
   
 <% end %>
