--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,20 +1,28 @@
-<%= form_for(task) do |f| %>
-  <% if task.errors.any? %>
-    <div id= "error_explanation">
-      <ul>
-        <% task.errors.full_messages.each do |task| %>
-        <li><%= task %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-  
-  <%= f.label :status, 'ステータス' %>
-  <%= f.text_field :status %>
+<div class="row">
+  <div class="col-xs-6">
+    <%= form_for(task) do |f| %>
 
-  <%= f.label :content, 'タスク' %>
-  <%= f.text_field :content %>
+      <% if task.errors.any? %>
+        <div class="alert alert-warning">
+          <ul>
+            <% task.errors.full_messages.each do |task| %>
+              <li><%= task %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
+ 
+      <div class="form-group"> 
+        <%= f.label :status, 'ステータス' %>
+        <%= f.text_field :status, class: 'form-control' %>
+      </div>
   
-  <%= f.submit '投稿' %>
-  
-<% end %>
+      <div class="form-group">
+        <%= f.label :content, 'タスク' %>
+        <%= f.text_field :content, class: 'form-control' %>
+      </div>
+
+        <%= f.submit '投稿', class: 'btn btn-primary' %>
+    <% end %>
+  </div>
+</div>
