--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -2,10 +2,10 @@
   <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-lg-offset-3 col-lg-6">
     <%= form_for(task) do |f| %>
 
-      <% if task.errors.any? %>
+      <% if tasks.errors.any? %>
         <div class="alert alert-warning">
           <ul>
-            <% task.errors.full_messages.each do |task| %>
+            <% task.errors.full_messages.each do |message| %>
               <li><%= task %></li>
             <% end %>
           </ul>
